# Kuber

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  docker-compose.yml  envoy-auth.yaml  envoy.yaml  go.mod  go.sum  import_formatter.py  main.go  nginx.conf  pre.sh  setup.cfg  stopper.sh  test.html  test.js  test.py  utils.py
auth/: Dockerfile  (+3 more)
grpc-server/: main.py  policy.db  pyproject.toml  requirements.txt  start.py
grpc-server/auth/: authorize.py
grpc-server/db/: client.py
grpc-server/definitions/: container_pb2.py  container_pb2.pyi  environment_pb2.py  environment_pb2.pyi  environment_pb2_grpc.py  execute_pb2.py  execute_pb2.pyi  execute_pb2_grpc.py  files_pb2.py  files_pb2.pyi  files_pb2_grpc.py  logs_pb2.py  logs_pb2.pyi  logs_pb2_grpc.py  retrieve_pb2.py  retrieve_pb2.pyi  retrieve_pb2_grpc.py  sandbox_pb2.pyi  uptime_pb2.py  uptime_pb2.pyi  uptime_pb2_grpc.py
grpc-server/dockerclient/: client.go  client.py  container.py  environment.py  execute.py  files.py  image.py  sandbox.py
grpc-server/dockerclient/preprocess/: dockerfile.py
grpc-server/interceptors/: authorize.py  logger.py
grpc-server/models/config/: config_model.go
grpc-server/protos/container/: container.go  container.pb.go  container.proto  container_grpc.pb.go
grpc-server/protos/definitions/: compose.proto  container.proto  execute.proto  image.proto
grpc-server/protos/execution/: execute.go  execute.pb.go  execute.proto  execute_grpc.pb.go
grpc-server/protos/image/: image.pb.go  image.proto  image_grpc.pb.go
grpc-server/server/: grpc_server.go
grpc-server/servicers/: container.py  environment.py  execute.py  files.py  image.py  logs.py  retrieve.py  sandbox.py  uptime.py
image-service/: app.py  docker_client.py  pyproject.toml  task_queue.py
image-service/routes/: registry.py
kuber/: README.md  pyproject.toml
kuber/kuber/: inf.sh  main.py
kuber/kuber/db/: base.py  sandbox.py
kuber/kuber/dockerclient/: container.py  files.py  logs.py  network.py  process.py  sandbox.py
kuber/kuber/routers/: files.py  process.py  sandbox.py
kuber/kuber/utils/: formatter.py
rest/: manage.py  pyproject.toml  requirements.txt  schema.yml  start.sh
rest/accounts/: admin.py  apps.py  authentication.py  middleware.py  models.py  serializers.py  urls.py  views.py
rest/accounts/migrations/: 0001_initial.py
rest/container/: admin.py  apps.py  models.py  views.py
rest/container/migrations/: 0001_initial.py  0002_initial.py
rest/core/: forms.py
rest/definitions/: container_pb2.py  container_pb2.pyi  container_pb2_grpc.py  environment_pb2.py  environment_pb2.pyi  environment_pb2_grpc.py  execute_pb2.pyi  files_pb2.py  image_pb2.py  image_pb2.pyi  image_pb2_grpc.py  sandbox_pb2.py  sandbox_pb2.pyi  sandbox_pb2_grpc.py
rest/environment/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
rest/fixtures/: everything.yaml  languages.yaml  roles.yaml
rest/grpc_client/: channel.py  environment.py  sandbox.py
rest/interview/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
rest/language_support/: admin.py  apps.py  models.py  urls.py  views.py
rest/middleware/: auth.py
rest/rest/: asgi.py  settings.py  urls.py  wsgi.py
rest/user/: admin.py  authentication.py  middleware.py  models.py  serializers.py  signals.py  urls.py  views.py
rest/utils/: logger.py  response.py
(+126 files in other folders)
