[tool.poetry]
name = "kuber"
version = "0.1.0"
description = ""
authors = ["deepakdinesh1123 <d.deepakdinesh13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.101.0"
uvicorn = "^0.23.2"
docker = "^6.1.3"
websockets = "^11.0.3"
sse-starlette = "^1.6.1"
sqlalchemy = "^2.0.20"
psycopg2 = "^2.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
