[tool.poetry]
name = "kuber-rest-api"
version = "0.0.1"
description = "REST API for kuber"
authors = ["deepakdinesh1123 <d.deepakdinesh13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
django-rest-framework = "^0.1.0"
psycopg2 = "^2.9.6"
djangorestframework-simplejwt = "^5.2.2"
pre-commit = "^3.2.2"
django-cors-headers = "^3.14.0"
grpcio = "^1.54.0"
python-dotenv = "^1.0.0"
grpcio-tools = "^1.56.0"
requests = "^2.31.0"
hvac = "^1.1.1"
PyJWT = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
